# cerebras-maker

./: .gitignore  IMPLEMENTATION_PLAN.md  PRD-ADD.md  PRD.md  README.md  package-lock.json  package.json
.augment/agents/: documentation-expert.md  grits-expert.md  researcher.md  rhai-expert.md  tauri-auditor.md  test-generator.md
docs/: README.md  RLM_API.md
docs/dev/: api-reference.md  architecture.md  components.md  contributing.md  setup.md  testing.md
docs/user/: faq.md  features.md  getting-started.md  troubleshooting.md  tutorial.md  ui-guide.md
docs/user/screenshots/: README.md
projects/my-app-test/: index.html  package.json
projects/my-app-test/src/: App.tsx
projects/my-app-test/src-tauri/: Cargo.toml  tauri.conf.json
src/: App.css  App.tsx  constants.ts  tauri-api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crawl4ai-rs/: Cargo.toml
src-tauri/crawl4ai-rs/src/: crawler.rs  http_crawler.rs  lib.rs  markdown.rs
src-tauri/crawl4ai-rs/src/content_filter/: pruning.rs
src-tauri/grits-core/: Cargo.toml
src-tauri/grits-core/js/: grits_fs.js  grits_git.js
src-tauri/grits-core/src/: context.rs  fs.rs  git.rs  lib.rs  memory_store.rs  merge.rs  models.rs  search.rs  store.rs  sync.rs  util.rs  wasm.rs
src-tauri/grits-core/src/strategic/: advisor.rs  analysis.rs  context.rs  mod.rs  workflow.rs
src-tauri/grits-core/src/topology/: analysis.rs  builtins.rs  cache.rs  incremental.rs  layers.rs  mod.rs  parser.rs  refactor.rs  scanner.rs  virtual_apply.rs  workspace.rs
src-tauri/grits-core/tests/: export_test.rs  git_test.rs  memory_store_test.rs  search_test.rs
src-tauri/projects/maker-app-test/: index.html  package.json
src-tauri/projects/maker-app-test/src/: App.tsx
src-tauri/projects/maker-app-test/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/prompts/: analyze_prd.md  architect.md  atom_coder.md  atom_grits.md  atom_reviewer.md  atom_rlm_processor.md  atom_search.md  atom_tester.md  context_engineer.md  generate_tests.md  interrogator.md  orchestrator.md  script_generator.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: architect.rs  atom_executor.rs  context_engineer.rs  interrogator.rs  mod.rs  orchestrator.rs
src-tauri/src/generators/: mod.rs  registry.rs  rhai_generator.rs  task_generator.rs
src-tauri/src/handlers/: git.rs  governance.rs  llm.rs  mod.rs  system.rs  testing.rs
src-tauri/src/knowledge_base/: mod.rs
src-tauri/src/llm/: mod.rs  prompts.rs  provider.rs  resilient.rs
src-tauri/src/maker_core/: ast_edit.rs  atom.rs  atom_bridge.rs  mod.rs  rlm.rs  runtime.rs  shadow_git.rs  voting.rs  web_research_bridge.rs
src-tauri/src/scripts/: rlm_demo.rhai  voting.rhai
src-tauri/src/templates/: mod.rs
src-tauri/src/templates/tauri_react/: App.tsx  Cargo.toml  package.json  tauri.conf.json
src/components/: Blueprint.css  Blueprint.tsx  ChatInput.tsx  Cockpit.css  Cockpit.tsx  Dashboard.css  Dashboard.tsx  ExecutionPanel.tsx  GitPanel.tsx  GraphView.tsx  KnowledgePanel.tsx  PRDUpload.tsx  PlanView.tsx  RLMTrajectory.css  RLMTrajectory.tsx  ResearchPanel.tsx  SessionPanel.tsx  Settings.tsx  Sidebar.tsx  TestPanel.tsx  ThreadPanel.tsx  TimeMachine.css  TimeMachine.tsx  TimeSlider.tsx  ValidationPanel.tsx
src/hooks/: useTauri.ts
src/store/: makerStore.ts
