[package]
name = "cerebras-maker"
version = "0.1.0"
description = "Cerebras-MAKER: Autonomous Coding System"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cli = []  # Enable CLI mode (keeps console window on Windows)
native-git = ["dep:walkdir"]  # Use native gix operations instead of git CLI

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cerebras_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Grits-core for Semantic Tree-Shaking and architectural red-flagging
grits-core = { path = "grits-core" }

# Crawl4AI for web crawling capabilities
crawl4ai-rs = { path = "crawl4ai-rs" }

# Rhai scripting runtime
rhai = { version = "1.23.6", features = ["serde", "sync"] }

# LLM abstraction framework
rig-core = "0.28.0"

# Git operations
gix = { version = "0.77.0", features = ["max-performance", "tree-editor"] }

# AST manipulation
ast-grep-core = "0.40.5"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Utilities
once_cell = "1.19"
walkdir = { version = "2.5", optional = true }  # For native-git feature
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tauri-plugin-shell = "2.3.4"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-process = "2.3.1"
tauri-plugin-cli = "2.4.1"
tauri-plugin-updater = "2.9.0"
cerebras-rs = "0.0.2"
log = "0.4.29"
fastrand = "2.3.0"

[dev-dependencies]
tempfile = "3.24.0"

