[package]
name = "crawl4ai-rs"
version = "0.1.0"
edition = "2021"
description = "Rust web crawler for Cerebras-MAKER"

[lib]
name = "crawl4ai"
path = "src/lib.rs"

[dependencies]
chromiumoxide = { version = "0.5", features = ["tokio-runtime"], optional = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
html2text = "0.2"
url = "2.4"
futures = "0.3"
kuchiki = "0.8.1"
rust-stemmers = "1.2.0"
regex = "1"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
log = "0.4"
base64 = "0.22"
html-escape = "0.2"

[features]
default = []
browser = ["chromiumoxide"]

[dev-dependencies]
wiremock = "0.6.5"
