[package]
name = "grits-core"
version = "2.7.1"
edition = "2021"
description = "Core library for Grits - a Git-native, local-first issue tracker."
license = "MIT"
repository = "https://github.com/babybirdprd/grits"
homepage = "https://github.com/babybirdprd/grits"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1.43"
uuid = { version = "1.19.0", features = ["js", "v4"] }
regex = "1.11"
petgraph = { version = "0.6", features = ["serde-1"] }
walkdir = "2.5.0"
glob = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
streaming-iterator = "0.1"
rayon = "1.10"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
tempfile = "3.2"
