[package]
name = "my-app-test"
version = "0.1.0"
description = "my-app-test"
authors = ["you"]
edition = "2021"

[lib]
name = "my-app-test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

