[package]
name = "{{project_name}}"
version = "0.1.0"
description = "{{PROJECT_NAME}}"
authors = ["you"]
edition = "2021"

[lib]
name = "{{project_name}}_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

